Generics_Extend_WildCard/Code7_error_report.txt
javac errors for Code7.java 
Code7.java:25: error: incompatible types: ArrayList<String> cannot be converted to List<? extends Number>
        List<? extends Number> numList2 = new ArrayList<String>();
                                          ^
Code7.java:29: error: incompatible types: String cannot be converted to Integer
        invalidMap.put(new Point(0, 0), "Not an Integer");
                                        ^
Note: Code7.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
 
========================= 
ExtendJ errors for Code7.java 
 
========================= 
Eclipse ECJ errors for Code7.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code7.java (at line 25)
	List<? extends Number> numList2 = new ArrayList<String>();
	                                  ^^^^^^^^^^^^^^^^^^^^^^^
Type mismatch: cannot convert from ArrayList<String> to List<? extends Number>
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code7.java (at line 29)
	invalidMap.put(new Point(0, 0), "Not an Integer");
	           ^^^
The method put(Point, Integer) in the type Map<Point,Integer> is not applicable for the arguments (Point, String)
----------
3. WARNING in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code7.java (at line 34)
	List<Integer> integerList = (List<Integer>) wildcardList;
	                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type safety: Unchecked cast from List<capture#1-of ?> to List<Integer>
----------
3 problems (2 errors, 1 warning)
